--- a/package.json
+++ b/package.json
@@ -10,14 +10,27 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
-    "typescript": "3.7.2"
+    "typescript": "3.7.2",
+    "axios": "^0.19.0",
+    "keymirror": "^0.1.1",
+    "moment": "^2.24.0",
+    "nls": "git+ssh://git@gitlab.com:bilprospekt/bilp-shared/bilprospekt-nls.git",
+    "ramda": "^0.26.1",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.4",
+    "shared_helpers": "git+ssh://git@gitlab.com:bilprospekt/bilp-shared/bilprospekt-shared-helpers.git",
+    "underscore": "^1.9.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=5000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "sass": "sass --watch src/styles:src/styles/css",
+    "create-links": "npm link src/components && npm link src/helpers && npm link src/store"
   },
+  "proxy": "http://localhost:3000",
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -32,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "node-sass": "^4.13.0"
   }
 }
