--- a/package.json
+++ b/package.json
@@ -4,22 +4,28 @@
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.22",
+    "@types/keymirror": "^0.1.1",
+    "@types/moment": "^2.13.0",
     "@types/node": "12.12.7",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0",
-    "typescript": "3.7.2",
+    "@types/react-redux": "^7.1.5",
+    "@types/react-router-dom": "^5.1.2",
+    "@types/redux": "^3.6.0",
+    "@types/underscore": "^1.9.3",
     "axios": "^0.19.0",
     "keymirror": "^0.1.1",
     "moment": "^2.24.0",
     "nls": "git+ssh://git@gitlab.com:bilprospekt/bilp-shared/bilprospekt-nls.git",
     "ramda": "^0.26.1",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "shared_helpers": "git+ssh://git@gitlab.com:bilprospekt/bilp-shared/bilprospekt-shared-helpers.git",
+    "typescript": "3.7.2",
     "underscore": "^1.9.1"
   },
   "scripts": {
