--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/ag-grid": "^3.2.0",
     "@types/jest": "24.0.22",
     "@types/keymirror": "^0.1.1",
     "@types/moment": "^2.13.0",
@@ -11,9 +12,13 @@
     "@types/react-dom": "16.9.4",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.2",
+    "@types/react-router-redux": "^5.0.18",
     "@types/redux": "^3.6.0",
     "@types/underscore": "^1.9.3",
+    "ag-grid-community": "^22.1.1",
+    "ag-grid-react": "^22.1.1",
     "axios": "^0.19.0",
+    "history": "^4.10.1",
     "moment": "^2.24.0",
     "nls": "git+ssh://git@gitlab.com:bilprospekt/bilp-shared/bilprospekt-nls.git",
     "ramda": "^0.26.1",
@@ -21,8 +26,10 @@
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
+    "semantic-ui-react": "^0.88.2",
     "shared_helpers": "git+ssh://git@gitlab.com:bilprospekt/bilp-shared/bilprospekt-shared-helpers.git",
     "typescript": "3.7.2",
     "underscore": "^1.9.1"
@@ -33,7 +40,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "sass": "sass --watch src/styles:src/styles/css",
-    "create-links": "npm link src/components && npm link src/helpers && npm link src/store"
+    "create-links": "npm link src/components && npm link src/helpers && npm link src/router && npm link src/store"
   },
   "proxy": "http://localhost:3000",
   "eslintConfig": {
